# distributed_systems

./: README.md
pa1/: CMakeLists.txt  Dockerfile  Makefile  README.md  child_operations.c  child_operations.h  constants.h  general_actions.c  ipc.c  log.c  log.h  main.c  parent_operations.c  parent_operations.h  pipe_operations.c  pipe_operations.h
pa2/: CMakeLists.txt  Dockerfile  README.md  banking.c  child_operations.c  child_operations.h  constants.h  lamport_logical_time.h  log.c  log.h  main.c  parent_operations.c  parent_operations.h  pipe_operations.h
pa4/: CMakeLists.txt  Dockerfile  child_operations.c  child_operations.h  constants.h  general_actions.c  ipc.c  lamport_logical_time.h  log.c  log.h  main.c  parent_operations.c  parent_operations.h  pipe_operations.c  queue_operations.c  queue_operations.h
pa6/: Dockerfile  child_operations.c  child_operations.h  constants.h  general_actions.h  ipc.c  lamport_logical_time.c  log.c  log.h  main  main.c  pa2345.c  parent_operations.c  parent_operations.h  pipe_operations.c
